--- a/download.conf
+++ b/download.conf
@@ -1,5 +1,3 @@
-DROIDIAN_CI_JOB_ID="9"
-DROIDIAN_DOWNLOAD_URL="https://ci.droidian.org/job/Halium12/ws/system-${DROIDIAN_CI_JOB_ID}.img"
-
-######
-DOWNLOAD_URL="${DROIDIAN_DOWNLOAD_URL}"
+IMAGE_ID="1"
+SYSTEM_DOWNLOAD_URL="https://filedump.furios.io/waydroid/system-${IMAGE_ID}.img"
+VENDOR_DOWNLOAD_URL="https://filedump.furios.io/waydroid/vendor-${IMAGE_ID}.img"
